--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Watcher</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
     {% block content %}
