--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+    {% include 'partials/navbar.html' %}
+
     {% block content %}
     
     {% endblock %}
