--- a/templates/games_new.html.j2
+++ b/templates/games_new.html.j2
@@ -13,5 +13,6 @@
         <label for="image">Image URL</label>
         <input type="text" name="image" id="image">
     </div>
+    <button type="submit">Submit</button>
 </form>
 {% endblock %}
