Added games_form partial

--- a/templates/games_index.html.j2
+++ b/templates/games_index.html.j2
@@ -1,9 +1,9 @@
 {% extends 'base.html.j2' %}
 
 {% block content %}
-<h1>Welcome to Watcher</h1>
 
 <div class="container">
+    <h1 class="text-center">Watcher</h1>
     <div class="row">
         {% for game in games %}
         <div class="col-sm-6">
