--- a/templates/games_show.html.j2
+++ b/templates/games_show.html.j2
@@ -4,6 +4,11 @@
 <div class="container">
     <h1>{{ game.name }}</h1>
     <a href="/games/{{ game._id }}/edit">Edit</a>
+    <p>
+        <form action="/games/{{ game._id }}/delete" method="POST">
+            <button type="submit">Delete</button>
+        </form>
+    </p>
     <img src="{{ game.image }}" alt="{{ game.name }}" height="80%" width="100%">
 </div>
 {% endblock %}
