--- a/templates/games_edit.html.j2
+++ b/templates/games_edit.html.j2
@@ -2,15 +2,9 @@
 
 {% block content %}
 <form action="/games/{{ game._id }}" method="POST">
-    <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" value="{{ game.name }}">
+    <div class="container">
+        {% include 'partials/games_form.html.j2' %}
+        <button class="btn btn-primary" type="submit">Update</button>
     </div>
-
-    <div class="form-group">
-        <label for="image">Image URL</label>
-        <input type="text" name="image" id="image" value="{{ game.image }}">
-    </div>
-    <button type="submit">Submit</button>
 </form>
 {% endblock %}
