--- a/templates/games_new.html.j2
+++ b/templates/games_new.html.j2
@@ -1,18 +1,10 @@
 {% extends 'base.html.j2' %}
 
 {% block content %}
-<h1>New Game</h1>
-
 <form action="/games" method="POST">
-    <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name">
+    <div class="container">
+        {% include 'partials/games_form.html.j2' %}
+        <button class="btn btn-success" type="submit">Add</button>
     </div>
-
-    <div class="form-group">
-        <label for="image">Image URL</label>
-        <input type="text" name="image" id="image">
-    </div>
-    <button type="submit">Submit</button>
 </form>
 {% endblock %}
